auth: add login/session cookies; frontend login modal; dev proxies; plan update
- Backend (agent.go):
  - Add POST /login (bcrypt verify), POST /logout, GET /me.
  - Issue HttpOnly SameSite=Lax session cookie signed with HMAC-SHA256 (userID.expiry.sig).
  - Load SESSION_SECRET from INI [default]; fallback to ephemeral secret if missing.
  - Helpers: setSessionCookie, clearSessionCookie, parseSession. Set Secure under HTTPS/X-Forwarded-Proto.

- Frontend (web/src/App.tsx):
  - Add Login modal and session state (me). Show user name + Log Out in nav; call /logout.

- Dev proxy (web/vite.config.ts):
  - Proxy /login, /logout, /me to 127.0.0.1:7866 to avoid 404s in dev.

- Plan:
  - Update .windsurf_plan.md with Login/Session Flow section.

Notes:
- Consider adding SESSION_SECRET to config.sample.ini for persistent sessions.
- Future: CSRF protection, password reset, email verification.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -83,6 +83,20 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Build: `go build ./...` passes. Marked configured to synchronous parse to fix TS type.
 - Next: Add login/session auth (cookies), password reset, and email verification.
 
+## Login / Session Flow (2025-08-12)
+- Backend (file: `agent.go`):
+  - Added `POST /login` to authenticate by `username` (email) and `password` using `bcrypt.CompareHashAndPassword` against `users.password_hash`.
+  - On success, issues an HttpOnly `session` cookie signed with HMAC-SHA256 over `userID.expiry` using a process `SESSION_SECRET` (from INI `[default]`, fallback ephemeral).
+  - Added `POST /logout` to clear the cookie.
+  - Added `GET /me` to return `{id, username, name}` for the current session (401 if not logged in).
+  - Helpers: `setSessionCookie`, `clearSessionCookie`, `parseSession` and `sessionSecret` initialization (supports `X-Forwarded-Proto` for Secure).
+- Frontend (file: `web/src/App.tsx`):
+  - Added Login modal (email + password) calling `/login`; shows errors inline; closes on success.
+  - Tracks session via `me` state loaded from `/me` on mount; nav shows "Hello, {name}" + "Log Out" when logged in.
+  - Added `logout()` calling `/logout` to clear session state.
+- Build: `go build ./...` passes.
+- Notes: This is a simple cookie-HMAC session; consider CSRF tokens for state-changing endpoints and secure cookie attributes in production.
+
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
   - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
