feat(security): add double-submit CSRF protection for /login and /logout; issue token via GET /csrf and set SameSite=Strict cookie
- Add newCSRFToken(), setCSRFCookie(), and validateCSRF() in agent.go
- Enforce Origin check (when present) and constant-time header/cookie compare
- Add GET /csrf endpoint returning {token} and setting csrf_token cookie
- Protect POST /login and POST /logout with CSRF validation
- Refactor loginRateLimiter.cleanup to use maps.Clone for snapshots

docs(plan): update .windsurf_plan.md with CSRF flow and frontend action items

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -122,6 +122,17 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `web/src/App.tsx`: Introduced `User` type and `isUser(o): o is User` type guard; simplified `/me` loader check and updated `me` state to `User | null`.
   - Benefit: safer runtime checks, cleaner code, and fewer brittle `any` casts.
 
+### CSRF Protection for Auth Endpoints (2025-08-13)
+- Backend (`agent.go`):
+  - Added double-submit CSRF defense.
+  - New `GET /csrf` issues a random token, sets `csrf_token` cookie (SameSite=Strict, Secure when HTTPS), and returns `{ token }` in JSON.
+  - Added helpers: `newCSRFToken()`, `setCSRFCookie(...)`, and `validateCSRF(c)` which enforces same-origin (when `Origin` present) and requires `X-CSRF-Token` to match the `csrf_token` cookie in constant-time.
+  - Enforced CSRF validation on `POST /login` and `POST /logout`.
+- Frontend action items:
+  - Before calling any state-changing endpoint, call `GET /csrf`, then include `X-CSRF-Token: <token>` header on requests. Ensure credentials/cookies are sent (fetch with `credentials: 'include'`).
+  - Update login/logout flows in `web/` to fetch the token and send the header.
+  - Note: Session cookie remains `SameSite=Lax`; CSRF cookie is `SameSite=Strict`.
+
 ### Login timing-attack comment clarification (2025-08-13)
 - File: `agent.go` (`POST /login` handler, non-existent user branch)
 - Change: Expanded the inline comment above `dummyBcryptCompare(p)` to explicitly state it mitigates username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found.
