frontend: add CSRF protection to login/logout; update plan
- web/src/components/LoginModal.tsx: fetch /csrf and include X-CSRF-Token + credentials on /login
- web/src/App.tsx: fetch /csrf and include X-CSRF-Token + credentials on /logout
- .windsurf_plan.md: document frontend CSRF updates under CSRF section

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -125,17 +125,21 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 ### CSRF Protection for Auth Endpoints (2025-08-13)
 - Backend (`agent.go`):
   - Added double-submit CSRF defense.
-  - New `GET /csrf` issues a random token, sets `csrf_token` cookie (SameSite=Strict, Secure when HTTPS), and returns `{ token }` in JSON.
   - Added helpers: `newCSRFToken()`, `setCSRFCookie(...)`, and `validateCSRF(c)` which enforces same-origin (when `Origin` present) and requires `X-CSRF-Token` to match the `csrf_token` cookie in constant-time.
   - Enforced CSRF validation on `POST /login` and `POST /logout`.
 - Frontend action items:
   - Before calling any state-changing endpoint, call `GET /csrf`, then include `X-CSRF-Token: <token>` header on requests. Ensure credentials/cookies are sent (fetch with `credentials: 'include'`).
   - Update login/logout flows in `web/` to fetch the token and send the header.
+  - Implemented: Updated `web/src/components/LoginModal.tsx` `login()` to fetch `/csrf`, include `X-CSRF-Token` and `credentials: 'include'` on the `/login` POST.
+  - Note: Session cookie remains `SameSite=Lax`; CSRF cookie is `SameSite=Strict`.
+  - Note: Login flow was updated to fetch and send CSRF token.
+  - Implemented: Updated `web/src/App.tsx` `logout()` to fetch `/csrf`, include `X-CSRF-Token` and `credentials: 'include'` on the `/logout` POST.
   - Note: Session cookie remains `SameSite=Lax`; CSRF cookie is `SameSite=Strict`.
 
 ### Login timing-attack comment clarification (2025-08-13)
 - File: `agent.go` (`POST /login` handler, non-existent user branch)
 - Change: Expanded the inline comment above `dummyBcryptCompare(p)` to explicitly state it mitigates username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found.
+{{ ... }}
 - Reason: Improve maintainability and security clarity for future reviewers; behavior unchanged.
 
 ### Bcrypt timing mitigation hardening (2025-08-13)
