Auth/Security: normalize email usernames; CSRF-protect signup; unify HTTPS detection
- agent.go:
  * /signup and /login: use strings.ToLower(strings.TrimSpace(username)) for case-insensitive emails aligning with rate limiter keys.
  * /signup: add CSRF protection via validateCSRF(c).
  * Extract isSecure(*http.Request) using TLS or X-Forwarded-Proto (case-insensitive) and delegate isSecureRequest to it.
  * isAllowedWSOrigin: use isSecure(r) for scheme detection (consistency, proxy-aware), keep allowlist behavior.
- web/src/components/SignupModal.tsx:
  * Fetch /csrf and include X-CSRF-Token + credentials in /signup POST.
- .windsurf_plan.md: document auth normalization, CSRF addition, and HTTPS helper refactor.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -639,3 +639,17 @@ Next:
     - Introduced `web/src/types.ts` exporting `User`, `LoginSuccess`, and guards `isUser`, `isLoginSuccess`.
     - Updated `web/src/App.tsx` and `web/src/components/LoginModal.tsx` to import and use these, removing duplicated `User` type and verbose inline checks.
   - Build status: `go build ./...` passes.
+
+## Auth: Normalize Email Usernames (2025-08-13)
+- Backend (`agent.go`):
+  - Lowercase and trim usernames in both `POST /signup` and `POST /login` handlers using `strings.ToLower(strings.TrimSpace(req.Username))`.
+  - Rationale: Treat email addresses case-insensitively and align with rate limiter keys (`isLocked`, `recordFailure`, `recordSuccess`), avoiding inconsistencies like `User@example.com` vs `user@example.com`.
+  - Status: Implemented; `go build ./...` passes.
+  - Follow-up: Consider enforcing a case-insensitive unique constraint at the DB layer (e.g., unique index on `LOWER(username)`).
+
+## HTTPS Detection Helper Refactor (2025-08-13)
+- Backend (`agent.go`):
+  - Extracted `isSecure(r *http.Request)` to determine HTTPS via `r.TLS` or `X-Forwarded-Proto` using `strings.EqualFold`.
+  - Updated `isSecureRequest(c *gin.Context)` to delegate to `isSecure(c.Request)`.
+  - Modified `isAllowedWSOrigin(...)` to use `isSecure(r)` for scheme detection, replacing manual checks and ensuring case-insensitive handling.
+  - Status: Implemented; `go build ./...` passes.
