frontend(auth): harden CSRF JSON parsing in Login/Signup modals\n\n- Guard csrfRes.json() with safe parse and optional chaining to avoid crashes on non-JSON/null payloads\n- Show user-friendly error when token missing\n- Update plan with robustness note

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -130,6 +130,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Frontend:
   - `web/src/components/LoginModal.tsx`: Removed `.catch(() => ({}))` around `res.json()` so malformed JSON surfaces to the outer try/catch, preventing silent failures.
   - `web/src/components/SignupModal.tsx`: Same fix as Login modal for consistent error propagation.
+  - CSRF fetch hardening: Guarded `await csrfRes.json()` with a safe parse (`.catch(() => null)`) and optional chaining when reading `token` in both Login and Signup modals to avoid crashes if `/csrf` returns non-JSON or null. Shows a user-facing error instead of throwing.
   - `web/src/App.tsx`: Introduced `User` type and `isUser(o): o is User` type guard; simplified `/me` loader check and updated `me` state to `User | null`.
   - Benefit: safer runtime checks, cleaner code, and fewer brittle `any` casts.
 
