frontend(csrf): add shared fetchCSRFToken helper and refactor auth flows for type-safety\n\n- Create web/src/utils/csrf.ts with fetchCSRFToken(): fetches /csrf with credentials, safely parses JSON, validates token string.\n- Refactor web/src/components/LoginModal.tsx and SignupModal.tsx to use helper; remove brittle type assertions.\n- Refactor web/src/App.tsx logout() to use helper.\n- Update .windsurf_plan.md documenting the frontend CSRF helper refactor.\n\nResult: clearer, safer CSRF handling across login, signup, and logout with reduced duplication.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -149,6 +149,16 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Implemented: Updated `web/src/App.tsx` `logout()` to fetch `/csrf`, include `X-CSRF-Token` and `credentials: 'include'` on the `/logout` POST.
   - Note: Session cookie remains `SameSite=Lax`; CSRF cookie is `SameSite=Strict`.
 
+### Frontend CSRF helper refactor (2025-08-13)
+- Added shared helper `web/src/utils/csrf.ts` exporting `fetchCSRFToken()` that:
+  - Calls `/csrf` with `credentials: 'include'`.
+  - Safely parses JSON and validates `token` as a non-empty string; throws descriptive errors otherwise.
+- Refactored components to use the helper instead of inline parsing:
+  - `web/src/components/LoginModal.tsx` (login flow)
+  - `web/src/components/SignupModal.tsx` (signup flow)
+  - `web/src/App.tsx` (`logout()`)
+- Benefit: removes duplication, improves type safety/readability, and standardizes error messages for CSRF retrieval.
+
 ### Login timing-attack comment clarification (2025-08-13)
 - File: `agent.go` (`POST /login` handler, non-existent user branch)
 - Change: Expanded the inline comment above `dummyBcryptCompare(p)` to explicitly state it mitigates username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found.
