--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -159,6 +159,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - `web/src/App.tsx` (`logout()`)
 - Benefit: removes duplication, improves type safety/readability, and standardizes error messages for CSRF retrieval.
 
+#### CSRF helper type-safety tweak (2025-08-13)
+- File: `web/src/utils/csrf.ts`
+- Change: Replaced `(data as any)?.token` with explicit structural checks on the parsed JSON (`unknown` -> object with non-empty string `token`).
+- Reason: Avoid `any` and enforce stronger compile-time guarantees while preserving existing runtime behavior.
+
 ### Login timing-attack comment clarification (2025-08-13)
 - File: `agent.go` (`POST /login` handler, non-existent user branch)
 - Change: Expanded the inline comment above `dummyBcryptCompare(p)` to explicitly state it mitigates username-enumeration timing attacks by performing a dummy bcrypt comparison when the user is not found.
