docs(plan): record CSRF fixes: Vite proxy /csrf, backend ALLOWED_ORIGINS allowlist + debug logs, and curl verification steps

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -670,3 +670,10 @@ Next:
   - Updated `isSecureRequest(c *gin.Context)` to delegate to `isSecure(c.Request)`.
   - Modified `isAllowedWSOrigin(...)` to use `isSecure(r)` for scheme detection, replacing manual checks and ensuring case-insensitive handling.
   - Status: Implemented; `go build ./...` passes.
+
+## CSRF under Vite Proxy (2025-08-13)
+- Frontend (`web/vite.config.ts`): Added `'/csrf'` to `server.proxy` so `GET /csrf` is forwarded to the Go API on `127.0.0.1:7866` during dev, ensuring the `csrf_token` cookie is set for origin `http://localhost:5174`.
+- Backend (`agent.go`): Enhanced `validateCSRF()` to support an origin allowlist via INI key `[default] ALLOWED_ORIGINS` and added detailed diagnostic logs for origin allow/deny, header/cookie presence, and token mismatch.
+- Config: Set `ALLOWED_ORIGINS=http://localhost:5174,http://127.0.0.1:5174` in `~/.config/go-thing/config.ini` and restarted the server (Air).
+- Verification: Used curl through Vite proxy to fetch a CSRF token and reuse the same cookie jar and token for `/login`. Confirmed 200 OK. The browser login flow now succeeds.
+- Notes: Keep `SameSite=Strict` for `csrf_token`. Always fetch `/csrf` once immediately before the state-changing POST and send `X-CSRF-Token` with `credentials: 'include'` so cookie is attached.
