refactor(utility): move password, CSRF/HMAC, and session helpers from agent.go into utility/{password,security,session}.go; update references and tests; docs: update .windsurf_plan.md and CHANGELOG.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -18,6 +18,20 @@
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
 - Implemented AI follow-up loop for gemini-code-assist bot reviews in GitHub webhook handler.
 
+### Refactor: Move auth/security utilities to utility/ (2025-09-07)
+- Backend (file: `agent.go` → package `utility/`)
+  - Moved password strength checker to `utility/password.go` as `IsStrongPassword`.
+  - Moved CSRF helpers to `utility/security.go`:
+    - `NewCSRFToken`, `SetCSRFCookie`, `ValidateCSRF`
+    - `IsSecure` and `IsSecureRequest` for TLS/X-Forwarded-Proto detection
+    - HMAC helpers `HMACSHA256` and `HMACEqual`
+  - Moved session helpers to `utility/session.go`:
+    - `SetSessionCookie`, `ClearSessionCookie`, `ParseSession`
+  - Updated all references in `agent.go` to use the new utility functions.
+  - Updated tests in `agent_github_test.go` to import and use `utility.HMAC*` helpers.
+  - Removed unused imports from `agent.go` after extraction.
+  - Verified `go build ./...` and `go test ./...` pass.
+
 ### Slack App Home Improvements (2025-08-23)
 - Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
 - Home view builder now returns `(view, error)` to surface partial failures (DB fetch issues) while still rendering.
