refactor(routes,utility): extract Slack, GitHub, Jira, Signup, Login, and SSH routes into routes/*; move CSRF/HMAC/session/password helpers into utility/*; update references; docs: update .windsurf_plan.md and CHANGELOG.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -32,6 +32,17 @@
   - Removed unused imports from `agent.go` after extraction.
   - Verified `go build ./...` and `go test ./...` pass.
 
+### Refactor: Extract HTTP routes into routes/ (2025-09-07)
+- Backend (file: `agent.go` → package `routes/`)
+  - Moved Slack webhook handler to `routes/slack_routes.go` (`RegisterSlackRoutes`) and registered from `main`.
+  - Moved GitHub webhook handler to `routes/github_routes.go` (`RegisterGithubRoutes`) and registered from `main`.
+  - Moved Signup endpoint to `routes/signup_routes.go` (`RegisterSignupRoutes`) and registered from `main`.
+  - Moved Login endpoint to `routes/login_routes.go` (`RegisterLoginRoutes` with injected deps for limiter/session helpers) and registered from `main`.
+  - Moved authenticated SSH key generation endpoint to `routes/api_ssh_routes.go` (`RegisterAPISSHRoutes` with injected Docker/ssh-keygen helpers) and registered from `main`.
+  - Moved Jira webhook handler to `routes/jira_routes.go` (`RegisterJiraRoutes`) and registered from `main`.
+- Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
+- Status: `go build ./...` and `go test ./...` pass.
+
 ### Slack App Home Improvements (2025-08-23)
 - Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
 - Home view builder now returns `(view, error)` to surface partial failures (DB fetch issues) while still rendering.
