--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -14,6 +14,11 @@
 - Restored error logging for Slack App Home publishing in `routes/slack_routes.go`.
 - Now logs `[Slack Home] publish failed for user <id>: <error>` when `utility.PublishSlackHomeTab(...)` returns an error.
 
+### Migrations CLI Refactor (2025-09-07)
+- Extracted unexported `runMigrateCLI` from `agent.go` into `utility/migrations.go` as exported `utility.RunMigrateCLI`.
+- Updated `main()` in `agent.go` to call `utility.RunMigrateCLI(os.Args[2:])` when `os.Args[1] == "migrate"`.
+- Removed the local function and the now-unused `flag` import from `agent.go`.
+
 
 ## Objectives
 - Add a chat interface for the AI agent to handle user inputs via chat and call tools.
